# wl-binclock

./: Cargo.toml  LICENSE  README.md
config/: Cargo.toml
config/src/: lib.rs
src/: args.rs  draw.rs  log.rs  main.rs  timer.rs  wallpaper.rs
