[package]
name = "wl-binclock"
version = "2.0.0"
edition = "2024"

[dependencies]
rand = "0.9"
smithay-client-toolkit = {version = "0.19", default-features = false, features = []}
chrono = {version = "0.4", default-features = false, features = ["clock"]}
clap = {version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"]}
nix = {version = "0.29", features = ["poll", "fs"]}
image = {version = "0.25.6", default-features = false, features = ["png", "jpeg", "bmp", "ico"]}

[profile.release]
lto = true
